--- a/second-lesson-pokemon/package.json
+++ b/second-lesson-pokemon/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "first-lesson-pokemon",
+  "name": "second-lesson-pokemon",
   "version": "0.1.0",
-  "homepage": "https://backdorJ.github.io/2.2024-Sem-Oris",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,8 +13,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
