--- a/thrird-lesson-pokemon-and-api/PokemonAPI/PokemonAPI/appsettings.json
+++ b/thrird-lesson-pokemon-and-api/PokemonAPI/PokemonAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CacheSettings": {
+    "RedisConnection": "localhost:6379"
+  },
   "AllowedHosts": "*"
 }
