--- a/thrird-lesson-pokemon-and-api/PokemonAPI/PokemonAPI/appsettings.json
+++ b/thrird-lesson-pokemon-and-api/PokemonAPI/PokemonAPI/appsettings.json
@@ -8,5 +8,8 @@
   "CacheSettings": {
     "RedisConnection": "localhost:6379"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=testDb;"
+  }
 }
