--- a/TeamHostSignalRChat/TeamHost.WEB/TeamHost.WEB.csproj
+++ b/TeamHostSignalRChat/TeamHost.WEB/TeamHost.WEB.csproj
@@ -77,6 +77,7 @@
       <Folder Include="Areas\Home\Models\" />
       <Folder Include="Areas\Home\Views\" />
       <Folder Include="Areas\Main\Models\" />
+      <Folder Include="Extensions\" />
       <Folder Include="wwwroot\profiles\" />
     </ItemGroup>
 
@@ -349,6 +350,30 @@
     <ItemGroup>
       <ProjectReference Include="..\TeamHost.Infrastructure\TeamHost.Infrastructure.csproj" />
       <ProjectReference Include="..\TeamHost.Persistence\TeamHost.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\Views\Shared\_HeaderPartial.ru.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>_HeaderPartial.ru.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Shared\_NavBarPartial.ru.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>_NavBarPartial.ru.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\Views\Shared\_HeaderPartial.ru.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>_HeaderPartial.ru.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Shared\_NavBarPartial.ru.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>_NavBarPartial.ru.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
